# rclgd

./: .gitignore  CMakeLists.txt  README.md  package.xml
rclgd_demo/: icon.png.import  project.godot
rclgd_demo/Assets/Models/Cone/: Cone.glb.import  yCone.glb.import  yCone_YellowCone.png.import
rclgd_demo/Scenes/sim/: GPULidar.gd  GPULidar.gd.uid  SimEnv.tscn  debug.gdshader  debug.gdshader.uid  sim_env.gd  test_services.gd
rclgd_demo/Scripts/: LidarCompositor.gd  LidarCompositor.gd.uid  LidarShader.glsl  LidarShader.glsl.import  LidarShader.glsl.uid  debugLidar.glsl.import
rclgd_demo/addons/freecam_3D/: freecam.gd  plugin.gd
rclgd_demo/addons/rclgd/: rclgd.gd  ros_init.gd
scripts/: install_godot.bash  launch_demo.sh
src/: register_types.cpp  register_types.h
src/editor_plugin/: ros_editor_plugin.cpp  ros_editor_plugin.hpp
src/rclgd/: rclgd.cpp  rclgd.hpp  ros_client.cpp  ros_client.hpp  ros_msg.cpp  ros_msg.hpp  ros_node.cpp  ros_node.hpp  ros_publisher.cpp  ros_publisher.hpp  ros_service.cpp  ros_service.hpp  ros_subscriber.cpp  ros_subscriber.hpp
src/rclgd/utils/: ros_type_utils.hpp
src/tf2gd/: ros_node_3d.cpp  ros_node_3d.hpp
